--- a/数学物理方法/一、向量分析/1.3 标量积或点积.md
+++ b/数学物理方法/一、向量分析/1.3 标量积或点积.md
@@ -24,4 +24,16 @@
 通常用带下标的单位向量 $\boldsymbol{e}_{m},\,m=1,2,3$ 来代替  $\hat{\boldsymbol{x}}$、$\hat{\boldsymbol{y}}$ 和 $\hat{\boldsymbol{z}}$  会更方便，其中 $\hat{\boldsymbol{x}}=\boldsymbol{e}_{1}$，以此类推。这样，方程（1.26a）和（1.26b）就变为$$\boldsymbol{e}_{m} \cdot \boldsymbol{e}_{n}=\delta_{mn} \tag{1.26c}$$当 $m \neq n$ 时，单位向量 $\boldsymbol{e}_{m}$ 和 $\boldsymbol{e}_{n}$ 是正交的。当 $m = n$ 时，每个向量都被归一化为单位长度，即具有单位大小。集合 $\boldsymbol{e}_m$ 被称为正交归一化的。与方程（1.26a）和（1.26b）相比，方程（1.26c）的一个主要优势在于它可以很容易地推广到 $N$ 维空间：$m,n = 1, 2, . . . , N$。最后，我们选择正交归一化的单位向量集 $\boldsymbol{e}_{m}$ 是为了方便——这是一种极大的便利。
 
 
+### 旋转下标量积的不变性
+
+我们尚未证明“标量”一词的合理性，也未证明标量积确实是一个标量。为此，我们研究了坐标系旋转下 $\boldsymbol{A} \cdot \boldsymbol{B}$ 的行为。通过使用方程（1.15），
+$$\begin{aligned}
+A_{x}^{\prime} B_{x}^{\prime}+A_{y}^{\prime} B_{y}^{\prime}+A_{z}^{\prime} B_{z}^{\prime}= &\sum_{i} a_{xi}A_{i}\sum_{j} a_{xj}B_{j}+\sum_{i} a_{yi}A_{i}\sum_{j} a_{yj}B_{j}\\
+&+\sum_{i} a_{zi}A_{i}\sum_{j} a_{zj}B_{j}.
+\end{aligned}\tag{1.27}$$
+使用索引 $k$ 和 $l$ 对 $x$、$y$ 和 $z$ 进行求和，我们得到$$\sum_{k} A_{k}^{\prime} B_{k}^{\prime}=\sum_{l} \sum_{i} \sum_{j} a_{l i} A_{i} a_{l j} B_{j}\tag{1.28}$$
+并且，通过重新排列右边的项，我们得到$$\sum_{k} A_{k}^{\prime} B_{k}^{\prime}=\sum_{l} \sum_{i} \sum_{j}\left(a_{l i} a_{l j}\right) A_{i} B_{j}=\sum_{i} \sum_{j} \delta_{i j} A_{i} B_{j}=\sum_{i} A_{i} B_{i}\tag{1.29}$$
+最后两步通过使用式（1.18）——方向余弦的正交条件，以及式（1.20）——定义了克罗内克 $δ$ 函数来完成。克罗内克 $δ$ 的作用是消去对任一指标求和时所有不匹配的项，仅保留指标相等的项。在式（1.29）中，其效果是将 $j$ 设为 $i$ 并消除对 $j$ 的求和。当然，我们同样可以将 $i$ 设为 $j$ 并消除对 $i$ 的求和。
+
+
 $\boldsymbol{A}$
