--- a/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
+++ b/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
@@ -64,6 +64,11 @@ T_{\text{rot}} &= \frac{1}{2} \sum m\left[\Omega_{i}^{2} x_{l}^{2}-\Omega_{i} x_
 
 如果将刚体当作连续体，则在定义 (32.2) 中的求和改为对刚体体积的积分：$$I_{i k}=\int \rho\left(x_{l}^{2} \delta_{i k}-x_{i} x_{k}\right) \mathrm{d} V .\tag{32.7}$$
 像任何二阶对称张量一样，惯量张量可以通过适当选择坐标轴 $x_{1},x_{2},x_{3}$ 的方向约化为对角的形式。这些方向称为 *惯量主轴*，而惯量张量相应的对角分量称为 *主转动惯量*，用 $I_1,I_2,I_3$ 表示在这样选择坐标轴 $x_{1},x_{2},x_{3}$ 时，转动动能表示为特别简单的形式：$$T_{\text{rot}} = \frac{1}{2}\left(I_{1} \Omega_{1}^{2} + I_{2} \Omega_{2}^{2} + I_{3} \Omega_{3}^{2}\right).\tag{32.8}$$
+> [!tip]
+> （32.6）中，这是个对称矩阵，对称矩阵 $A$，必定可以对角化处理，$P^{-1}AP=D$，其中 $P$ 由特征向量组成，$D$ 是对角矩阵，主对角线元素就是特征值。也就是说 “通过适当选择坐标轴 $x_{1},x_{2},x_{3}$ 的方向约化为对角的形式”，实际上就是选择特征向量方向，且这些特征值天然正交，而 $I_{1}, I_{2}, I_{3}$ 实际上就是特征值，即所谓的 *主转动惯量*。所以在这样的动坐标系下，就会有公式（32.8）。
+> 
+> 另外需要区别，在（32.6）中使用的是 $xyz$ 坐标系，在（32.8、32.9）中使用的是新的 $x_{1},x_{2},x_{3}$ 坐标系，不要混淆，但不管在那个坐标系下，对角元素的形式是一样的。这取决于（32.3）
+
 我们发现， 3 个主转动惯最中的每一个都不会大于另外两个之和。例如$$I_{1}+I_{2}=\sum m\left(x_{1}^{2}+x_{2}^{2}+2 x_{3}^{2}\right) \geqslant \sum m\left(x_{1}^{2}+x_{2}^{2}\right)=I_{3} .\tag{32.9}$$
 3 个主转动惯量各不相等的刚体称为*非对称陀螺*。
 
@@ -73,8 +78,8 @@ T_{\text{rot}} &= \frac{1}{2} \sum m\left[\Omega_{i}^{2} x_{l}^{2}-\Omega_{i} x_
 
 如果刚体具有某种对称性，确定惯量主轴就容易得多。显然，质心位置和惯量主轴的方向应该具有与刚体相同的对称性。
 
-例如，如果刚体有对称面，则质心应该在该平面内．两个惯量主轴也应该位于该平面内，而第 3 个主轴垂直该平面。对于这种情况，最明显的例子是平面质点系。这种情况下 3 个主转动惯量之间存在简单的关系。如果以系统所在平面为 $x_{1}x_{2}$ 平面，则由于对所有质点 $x_{3}=0$，故$$I_{1}=\sum mx_{2}^{2},\quad I_{2}=\sum mx_{1}^{2},\quad I_{3}=\sum m\left(x_{1}^{2}+x_{2}^{2}\right)$$因此$$I_{3}=I_{1}+I_{2}\tag{32.10}$$
-如果刚体有某阶的对称轴，则质心应该位于该轴上。惯量主轴之一与此轴重合，另外两个则与之垂直，如果对称轴的阶数大于 2 ，则刚体为对称陀螺。事实上，垂直于对称轴的任一主轴可以绕该对称轴旋转一个不等于 180° 的角度，即这组垂直轴的选取不是唯一的，而这只有当刚体是对称陀螺时才能如此。
+例如，如果刚体有对称面，则质心应该在该平面内，两个惯量主轴也应该位于该平面内，而第 3 个主轴垂直该平面。对于这种情况，最明显的例子是平面质点系。这种情况下 3 个主转动惯量之间存在简单的关系。如果以系统所在平面为 $x_{1}x_{2}$ 平面，则由于对所有质点 $x_{3}=0$，故$$I_{1}=\sum mx_{2}^{2},\quad I_{2}=\sum mx_{1}^{2},\quad I_{3}=\sum m\left(x_{1}^{2}+x_{2}^{2}\right)$$因此$$I_{3}=I_{1}+I_{2}\tag{32.10}$$
+如果刚体有某阶的对称轴，则质心应该位于该轴上。惯量主轴之一与此轴重合，另外两个则与之垂直。如果对称轴的阶数大于 2 ，则刚体为对称陀螺。事实上，垂直于对称轴的任一主轴可以绕该对称轴旋转一个不等于 180° 的角度，即这组垂直轴的选取不是唯一的，而这只有当刚体是对称陀螺时才能如此。
 
 位于一条直线上的质点系是一个特殊情况，如果选择这个直线为 $x_{3}$ 轴，则对于所有质点 $x_{1}x_{2}=0$，因此两个主转动惯量相等，第 3 个为零：$$I_{1}=I_{2}=\sum mx_{3}^{2},\quad I_{3=0}\tag{32.11}$$这种系统称为 *转子*。区别于其它刚体的特性是，转子仅有两个（不是 3 个）转动自由度，相应于绕 $x_{1}$ 和 $x_{2}$ 的转动，显然，论及直线绕自身的转动是没有意义的。
 
