--- a/理论物理/朗道/一、力学/第 5 章、微振动.md
+++ b/理论物理/朗道/一、力学/第 5 章、微振动.md
@@ -1,45 +1,390 @@
 
 
+**n 阶对称轴**：如果刚体绕某轴旋转 $\frac{360°}{n}$（或 $\frac{2\pi}{n}$）后与原来重合，则该轴称为 $n$ 阶对称轴（或 $C_n$ 轴）。
+
+| 物体 | 对称轴 | 阶数 | 旋转角度 |
+|------|--------|------|----------|
+| 均匀细棒 | 沿棒的轴 | $\infty$ | 任意角度 |
+| 圆柱 | 中心轴 | $\infty$ | 任意角度 |
+| 正方形薄板 | 垂直中心的轴 | 4 | $90°$ |
+| 等边三角形板 | 垂直中心的轴 | 3 | $120°$ |
+| 哑铃（两端相同） | 连线中垂线 | 2 | $180°$ |
+
+**证明：对称轴是惯量主轴之一**
+
+实际上是要证明：
+$$I_{xz} = -\sum m x z = 0$$
+
+物体绕 $z$ 轴旋转 $\theta_0 = \frac{2\pi}{n}$ 后与自身完全重合 → 惯性张量必须保持不变。
 
 
-为了计算刚体的动能，我们将刚体当作离散质点系，因此有$$T=\sum \frac{mv^2}{2}$$这里对刚体的所有质点求和，为了书写公式简便，此处和下文中我们省略了标记质点的下标。
+绕 $z$ 轴旋转角度 $\theta_0 = \frac{2\pi}{n}$，坐标变换为：
+$$\begin{pmatrix}x'\\y'\\z'\end{pmatrix} = \begin{pmatrix}\cos\theta_0 & -\sin\theta_0 & 0\\\sin\theta_0 & \cos\theta_0 & 0\\0 & 0 & 1\end{pmatrix}\begin{pmatrix}x\\y\\z\end{pmatrix}$$
 
-将公式 (31.2) 代入得$$T=\sum \frac{m}{2}(\boldsymbol{V}+\boldsymbol{\Omega} \times \boldsymbol{r})^{2}=\sum \frac{m}{2} V^{2}+\sum m \boldsymbol{V} \cdot(\boldsymbol{\Omega} \times \boldsymbol{r})+\sum \frac{m}{2}(\boldsymbol{\Omega} \times \boldsymbol{r})^{2}$$对刚体的所有质点 $\boldsymbol{V}$ 和 $\boldsymbol{\Omega}$ 都相同，所以在第一项中 $V^2/2$ 可以移到求和号之外，$\sum m$ 是刚体的质量，我们用 $μ$ 表示。第二项写成$$\sum m \boldsymbol{V} \cdot(\boldsymbol{\Omega} \times \boldsymbol{r})=\sum m \boldsymbol{r} \cdot(\boldsymbol{V} \times \boldsymbol{\Omega})=\boldsymbol{V} \times \boldsymbol{\Omega} \cdot \sum m \boldsymbol{r}$$由此可见，如果坐标原点选在刚体质心，则由 $\sum m \boldsymbol{r}=0$，故这一项等于零，最后，我们展开第 3 项中矢量积的平方，结果得$$T=\frac{\mu}{2} V^{2}+\frac{1}{2}\sum m\left[\Omega^{2} r^{2}-(\boldsymbol{\Omega}\cdot\boldsymbol{r})^{2}\right]$$
-> [!tip]
-> $(a \times b)^2 = (a \times b) \cdot (a \times b)$ 这等于该向量模长的平方：$(a \times b)^2 = |a \times b|^2=|a|^2|b|^2 \sin^2\theta$，又因为 $\sin^2\theta = 1 - \cos^2\theta$，且 $a \cdot b = |a| \, |b|\,\cos\theta$，所以：$(a \times b)^2 = a ^2 b^2 - (a \cdot b)^2$，这是一个很常用的公式。
-> 
+即：
+$$\begin{align}
+x' &= x\cos\theta_0 - y\sin\theta_0 \\[1.2ex]
+y' &= x\sin\theta_0 + y\cos\theta_0 \\[1.2ex]
+z' &= z
+\end{align}
+$$
 
-于是，刚体动能可以写成两个部分之和。（32.1) 的第一项是平动的动能，其形式如同整个刚体质量集中在质心。第二项是刚体以角速度 $\boldsymbol{\Omega}$ 绕通过质心的轴转动的动能，需要强调指出，正是由于固定在刚体上的坐标系的坐标原点选在质心上，才有动能分解为两部分的可能性。
+在新坐标系中，$I_{xz}$ 应该写为：$I_{x'z'} = -\sum m x' z'$，代入变换关系（$z' = z$）：
+$$\begin{align}
+I_{x'z'} &= -\sum m (x\cos\theta_0 - y\sin\theta_0) z \\[1.2ex]
+&= -\cos\theta_0 \sum mxz + \sin\theta_0 \sum myz \\[1.2ex]
+&= \cos\theta_0 \cdot I_{xz} - \sin\theta_0 \cdot I_{yz}
+\end{align}
+$$
+类似地：
+$$I_{y'z'} = \sin\theta_0 \cdot I_{xz} + \cos\theta_0 \cdot I_{yz}$$
 
-我们将转动动能改写成张量形式，用 $\boldsymbol{r}, \boldsymbol{\Omega}$ 的分量 $x_{i}, \Omega_{i}$ 表示为$$\begin{aligned}
-T_{\text{rot}} &= \frac{1}{2} \sum m\left[\Omega_{i}^{2} x_{l}^{2}-\Omega_{i} x_{i} \Omega_{k} x_{k}\right] = \frac{1}{2} \sum m\left[\Omega_{i} \Omega_{k} \delta_{i k} x_{l}^{2}-\Omega_{i} \Omega_{k} x_{i} x_{k}\right] \\
-&= \frac{1}{2} \Omega_{i} \Omega_{k} \sum m\left(x_{l}^{2} \delta_{i k}-x_{i} x_{k}\right) .
-\end{aligned}$$这里用到了恒等式 $\Omega_{i}=\delta_{ik} \Omega_{k}$，其中 $\delta_{ik}$ 是单位张量（其分量在 $i=k$ 时等于 1，在 $i \neq k$ 时等于零）。引入张量$$I_{ik}=\sum m\left(x_{l}^{2}\delta_{ik}-x_{i}x_{k}\right),\tag{32.2}$$最终可得刚体动能表达式为$$T=\frac{\mu}{2} V^{2}+\frac{1}{2} I_{ik}\Omega_{i}\Omega_{k}\tag{32.3}$$
-将 (32.3) 减去势能可得刚体的拉格朗日函数$$L=\frac{\mu V^{2}}{2}+\frac{1}{2} I_{ik}\Omega_{i}\Omega_{k}-U   \tag{32.4}$$一般情况下势能是确定刚体位置的 6 个变量的函数，例如质心的 3 个坐标 $X,Y,Z$ 和确定动坐标轴相对固定坐标轴方向的 3 个角。
+由于物体旋转 $\theta_0$ 后与自身完全重合，惯性张量必须保持不变：
+$$I_{x'z'} = I_{xz}, \quad I_{y'z'} = I_{yz}$$
+将变换关系代入不变性条件：
+$$\begin{cases}
+\cos\theta_0 \cdot I_{xz} - \sin\theta_0 \cdot I_{yz} = I_{xz}\\
+\sin\theta_0 \cdot I_{xz} + \cos\theta_0 \cdot I_{yz} = I_{yz}
+\end{cases}$$
 
-张量 $I_{ik}$ 称为刚体 *惯量矩张量*，或者简称刚体*惯量张量*。由定义 (32.2) 显见，它是对称的，即$$I_{ik}=I_{ki}\tag{32.5}$$
-为了清楚起见，我们将惯量张量的分量写成显式$$I_{i k}=\left(\begin{array}{ccc}
-\sum m\left(y^{2}+z^{2}\right) & -\sum mxy & -\sum mxz\\
--\sum myx&\sum m\left(x^{2}+z^{2}\right) & -\sum myz\\
--\sum mzx&-\sum mzy &\sum m\left(x^{2}+y^{2}\right)
-\end{array}\right) .\tag{32.6}$$分量 $I_{xx},I_{yy},I_{zz}$ 称为对相应坐标轴的转动惯量。
+整理：
+$$\begin{cases}
+(\cos\theta_0 - 1) I_{xz} - \sin\theta_0 \cdot I_{yz} = 0\\
+\sin\theta_0 \cdot I_{xz} + (\cos\theta_0 - 1) I_{yz} = 0
+\end{cases}$$
 
-显然，惯量张量可以相加，即刚体转动惯量等于其各部分转动惯量之和。
+写成矩阵：
+$$\begin{pmatrix}\cos\theta_0 - 1 & -\sin\theta_0\\\sin\theta_0 & \cos\theta_0 - 1\end{pmatrix}\begin{pmatrix}I_{xz}\\I_{yz}\end{pmatrix} = \begin{pmatrix}0\\0\end{pmatrix}$$
 
-如果将刚体当作连续体，则在定义 (32.2) 中的求和改为对刚体体积的积分：$$I_{i k}=\int \rho\left(x_{l}^{2} \delta_{i k}-x_{i} x_{k}\right) \mathrm{d} V .\tag{32.7}$$
-像任何二阶对称张量一样，惯量张量可以通过适当选择坐标轴 $x_{1},x_{2},x_{3}$ 的方向约化为对角的形式。这些方向称为 *惯量主轴*，而惯量张量相应的对角分量称为 *主转动惯量*，用 $I_1,I_2,I_3$ 表示在这样选择坐标轴 $x_{1},x_{2},x_{3}$ 时，转动动能表示为特别简单的形式：$$T_{\text{rot}} = \frac{1}{2}\left(I_{1} \Omega_{1}^{2} + I_{2} \Omega_{2}^{2} + I_{3} \Omega_{3}^{2}\right).\tag{32.8}$$
-我们发现， 3 个主转动惯最中的每一个都不会大于另外两个之和。例如$$I_{1}+I_{2}=\sum m\left(x_{1}^{2}+x_{2}^{2}+2 x_{3}^{2}\right) \geqslant \sum m\left(x_{1}^{2}+x_{2}^{2}\right)=I_{3} .\tag{32.9}$$
-3 个主转动惯量各不相等的刚体称为*非对称陀螺*。
+这个齐次方程组有非零解，当且仅当系数矩阵的行列式为零。$$
+\begin{align}
+\det &= (\cos\theta_0 - 1)^2 + \sin^2\theta_0 \\[1.2ex]
+&= \cos^2\theta_0 - 2\cos\theta_0 + 1 + \sin^2\theta_0 \\[1.2ex]
+&= 2 - 2\cos\theta_0 = 2(1 - \cos\theta_0)
+\end{align}
+$$
+而 $\theta_0 = \frac{2\pi}{n}$（$n \geq 2$）：$\cos\theta_0 \neq 1$，行列式 $\neq 0$，所以当行列式 $\neq 0$ 时，唯一解是：
+$$\boxed{I_{xz} = 0, \quad I_{yz} = 0}$$
 
-如果两个主转动惯量相等，$I_1 = I_2 \neq l_3$，则刚体称为*对称陀螺*。在这种情况下，在平面 $x_{1}x_{2}$ 内有一个主轴方向可任意选取。
 
-如果所有 3 个主转动惯量都相等，则刚体称为*球陀螺*。在这种情况下 3 个主轴可以任意选为任何 3 个相互垂直的轴。
 
-如果刚体具有某种对称性，确定惯量主轴就容易得多。显然，质心位置和惯量主轴的方向应该具有与刚体相同的对称性。
 
-例如，如果刚体有对称面，则质心应该在该平面内．两个惯量主轴也应该位于该平面内，而第 3 个主轴垂直该平面。对于这种情况，最明显的例子是平面质点系。这种情况下 3 个主转动惯量之间存在简单的关系。如果以系统所在平面为 $x_{1}x_{2}$ 平面，则由于对所有质点 $x_{3}=0$，故$$I_{1}=\sum mx_{2}^{2},\quad I_{2}=\sum mx_{1}^{2},\quad I_{3}=\sum m\left(x_{1}^{2}+x_{2}^{2}\right)$$因此$$I_{3}=I_{1}+I_{2}\tag{32.10}$$
-如果刚体有某阶的对称轴，则质心应该位于该轴上。惯量主轴之一与此轴重合，另外两个则与之垂直，如果对称轴的阶数大于 2 ，则刚体为对称陀螺。事实上，垂直于对称轴的任一主轴可以绕该对称轴旋转一个不等于 180° 的角度，即这组垂直轴的选取不是唯一的，而这只有当刚体是对称陀螺时才能如此。
+阶数 $>2$ 时为何是对称陀螺？
 
-位于一条直线上的质点系是一个特殊情况，如果选择这个直线为 $x_{3}$ 轴，则对于所有质点 $x_{1}x_{2}=0$，因此两个主转动惯量相等，第 3 个为零：$$I_{1}=I_{2}=\sum mx_{3}^{2},\quad I_{3=0}\tag{32.11}$$这种系统称为 *转子*。区别于其它刚体的特性是，转子仅有两个（不是 3 个）转动自由度，相应于绕 $x_{1}$ 和 $x_{2}$ 的转动，显然，论及直线绕自身的转动是没有意义的。
+### 关键定理
 
-最后，再做一个关于惯量张量计算的说明。虽然我们是在原点为质心的坐标系中定义这个张量的（只有在这个定义下基本公式 (32.3) 才成立），但是对于这个张量的计算，有时可能更为方便的是先计算相对另一个坐标原点 $O'$ 定义的类似张量$$I_{ik}^{\prime}=\sum m\left(x_{l}^{\prime 2}\delta_{i k}-x_{i}^{\prime} x_{k}^{\prime}\right) .$$如果距离 $OO'$ 由矢量 $\boldsymbol{a}$ 表示，则 $\boldsymbol{r}=\boldsymbol{r}'+\boldsymbol{a},x_{i}=x_{i}'+a_{i}$，考虑到按照 $O$ 点的定义，$\sum m \boldsymbol{r}=0$，我们得$$I_{i k}^{\prime}=I_{i k}+\mu\left(a^{2}\delta_{i k}-a_{i}a_{k}\right) .\tag{32.12}$$按这个公式，知道 $I_{i k}^{\prime}$ 就很容易计算出 $I_{i k}$。
+**对称陀螺定义**：两个主转动惯量相等，即 $I_1 = I_2 \neq I_3$。
+
+### 证明：n>2 ⟹ 对称陀螺
+
+设 $z$ 轴是 $n$ 阶对称轴（$n > 2$），在 $xy$ 平面内选择两个垂直的主轴方向。
+
+**考虑惯性张量在 $xy$ 平面内的部分**：
+
+$$\mathbf{I}_{xy} = \begin{pmatrix}I_{xx} & I_{xy}\\I_{yx} & I_{yy}\end{pmatrix}$$
+
+由于 $z$ 轴是主轴，$I_{xz} = I_{yz} = 0$（已证明）。
+
+现在考虑绕 $z$ 轴旋转 $\theta = \frac{2\pi}{n}$ 的对称性。
+
+**关键观察**：旋转后惯性张量不变（因为质量分布相同）。
+
+在旋转变换下：
+$$\mathbf{I}'_{xy} = \mathbf{R}(\theta)^T \mathbf{I}_{xy} \mathbf{R}(\theta) = \mathbf{I}_{xy}$$
+
+其中：
+$$\mathbf{R}(\theta) = \begin{pmatrix}\cos\theta & -\sin\theta\\\sin\theta & \cos\theta\end{pmatrix}$$
+
+设在 $xy$ 平面内的主轴方向，主转动惯量为 $I_1, I_2$（对应垂直于 $z$ 的两个主轴）。
+
+如果 $I_1 \neq I_2$，主轴方向是**唯一确定**的。
+
+但是！如果绕 $z$ 轴旋转 $\frac{2\pi}{n}$（$n>2$，即 $\theta \neq 180°$），物体重合，惯性张量应该不变。
+
+这意味着：
+- 原主轴方向：某个方向
+- 旋转后：主轴转了 $\frac{2\pi}{n}$
+- 但物体没变，所以新方向也应该是主轴
+
+这与"主轴唯一确定"矛盾！
+
+**唯一解决方案**：$I_1 = I_2$
+
+即垂直于对称轴的两个主转动惯量相等！
+
+### 数学细节
+
+假设在主轴坐标系中：
+$$\mathbf{I} = \begin{pmatrix}I_1 & 0 & 0\\0 & I_2 & 0\\0 & 0 & I_3\end{pmatrix}$$
+
+绕 $z$ 轴旋转 $\theta$ 后：
+$$\mathbf{I}' = \mathbf{R}^T\mathbf{I}\mathbf{R}$$
+
+计算 $xy$ 平面部分：
+$$\begin{pmatrix}\cos\theta & \sin\theta\\-\sin\theta & \cos\theta\end{pmatrix}\begin{pmatrix}I_1 & 0\\0 & I_2\end{pmatrix}\begin{pmatrix}\cos\theta & -\sin\theta\\\sin\theta & \cos\theta\end{pmatrix}$$
+
+$$= \begin{pmatrix}I_1\cos\theta & I_2\sin\theta\\-I_1\sin\theta & I_2\cos\theta\end{pmatrix}\begin{pmatrix}\cos\theta & -\sin\theta\\\sin\theta & \cos\theta\end{pmatrix}$$
+
+$$= \begin{pmatrix}I_1\cos^2\theta + I_2\sin^2\theta & (I_2-I_1)\sin\theta\cos\theta\\(I_2-I_1)\sin\theta\cos\theta & I_1\sin^2\theta + I_2\cos^2\theta\end{pmatrix}$$
+
+要使 $\mathbf{I}' = \mathbf{I}$（对称性要求），非对角元素必为零：
+$$(I_2 - I_1)\sin\theta\cos\theta = 0$$
+
+对于 $\theta = \frac{2\pi}{n}$（$n>2$），$\sin\theta\cos\theta \neq 0$（因为 $\theta \neq 0°, 90°, 180°$）。
+
+因此必须：
+$$\boxed{I_1 = I_2}$$
+
+
+
+----
+
+# 平行轴定理（Parallel Axis Theorem）的详细推导
+
+这是一个非常实用的定理！让我详细推导公式(32.12)。
+
+## 一、问题设置
+
+### 两个坐标系
+
+```
+      O (质心)
+      •
+      |\ 
+      | \ r
+      |  \
+      |   \ •质点
+      |   /
+      | r'/
+      |/
+      •--------
+     O'    a
+
+O: 质心位置（原点）
+O': 另一个参考点
+a: 从O到O'的矢量
+```
+
+**坐标关系**：
+$$\boldsymbol{r} = \boldsymbol{r}' + \boldsymbol{a}$$
+
+分量形式：
+$$x_i = x_i' + a_i$$
+
+**质心条件**（相对于O点）：
+$$\sum m\boldsymbol{r} = \boldsymbol{0}$$
+
+即：
+$$\sum m x_i = 0 \quad (i=1,2,3)$$
+
+**总质量**：
+$$\mu = \sum m$$
+
+
+
+
+ 
+$$I_{ik} = \sum m(r^2\delta_{ik} - x_i x_k)$$
+
+其中 $r^2 = x_l^2 = x_1^2 + x_2^2 + x_3^2$
+
+
+
+代入 $x_i = x_i' + a_i$：
+
+$$I_{ik} = \sum m\left[(x_l' + a_l)^2\delta_{ik} - (x_i' + a_i)(x_k' + a_k)\right]$$
+
+
+
+$$(x_l' + a_l)^2 = \sum_{l=1}^{3}(x_l' + a_l)^2 = \sum_l(x_l'^2 + 2x_l'a_l + a_l^2)$$
+
+$$= \underbrace{\sum_l x_l'^2}_{r'^2} + 2\underbrace{\sum_l x_l'a_l}_{\text{待处理}} + \underbrace{\sum_l a_l^2}_{a^2}$$
+
+因此：
+$$(x_l' + a_l)^2 = r'^2 + 2\sum_l x_l'a_l + a^2$$
+
+展开第二项
+
+$$(x_i' + a_i)(x_k' + a_k) = x_i'x_k' + x_i'a_k + a_i x_k' + a_i a_k$$
+
+代入$I_{ik}$
+
+$$I_{ik} = \sum m\left[\left(r'^2 + 2\sum_l x_l'a_l + a^2\right)\delta_{ik} - x_i'x_k' - x_i'a_k - a_i x_k' - a_i a_k\right]$$
+
+分组：
+$$I_{ik} = \underbrace{\sum m(r'^2\delta_{ik} - x_i'x_k')}_{I_{ik}'} + \underbrace{\sum m\left[2\left(\sum_l x_l'a_l\right)\delta_{ik} + a^2\delta_{ik} - x_i'a_k - a_i x_k' - a_i a_k\right]}_{\text{修正项}}$$
+
+利用质心条件
+
+从 $\sum m x_i = 0$ 和 $x_i = x_i' + a_i$：
+
+$$\sum m(x_i' + a_i) = 0$$
+
+$$\sum m x_i' + a_i\sum m = 0$$
+
+$$\boxed{\sum m x_i' = -a_i \mu}$$
+
+这是关键关系！计算修正项的各部分
+
+**第 1 部分**：$\sum m \cdot 2\left(\sum_l x_l'a_l\right)\delta_{ik}$
+
+$$= 2\delta_{ik}\sum_l a_l \sum m x_l'$$
+
+利用 $\sum m x_l' = -a_l\mu$：
+
+$$= 2\delta_{ik}\sum_l a_l \cdot (-a_l\mu) = -2\mu\delta_{ik}\sum_l a_l^2 = -2\mu a^2\delta_{ik}$$
+
+**第2部分**：$\sum m \cdot a^2\delta_{ik}$
+
+$$= \mu a^2\delta_{ik}$$
+
+**第3部分**：$\sum m \cdot x_i'a_k$
+
+$$= a_k\sum m x_i' = a_k \cdot (-a_i\mu) = -\mu a_i a_k$$
+
+**第4部分**：$\sum m \cdot a_i x_k'$
+
+$$= a_i\sum m x_k' = a_i \cdot (-a_k\mu) = -\mu a_i a_k$$
+
+**第5部分**：$\sum m \cdot a_i a_k$
+
+$$= \mu a_i a_k$$
+
+### Step 7: 合并所有项
+
+修正项 = 
+$$-2\mu a^2\delta_{ik} + \mu a^2\delta_{ik} + \mu a_i a_k + \mu a_i a_k - \mu a_i a_k$$
+
+$$= -\mu a^2\delta_{ik} + \mu a_i a_k$$
+
+$$= -\mu(a^2\delta_{ik} - a_i a_k)$$
+
+### Step 8: 最终结果
+
+$$I_{ik} = I_{ik}' - \mu(a^2\delta_{ik} - a_i a_k)$$
+
+移项得：
+$$\boxed{I_{ik}' = I_{ik} + \mu(a^2\delta_{ik} - a_i a_k)}$$
+
+**证毕！** ∎
+
+## 四、物理意义
+
+### 平行轴定理的含义
+
+```
+质心坐标系:           平移坐标系:
+    
+    I_ik              I'_ik
+    (相对质心)        (相对O'点)
+    
+    简单！            = I_ik + 修正项
+```
+
+**修正项的物理意义**：
+
+$$\mu(a^2\delta_{ik} - a_i a_k)$$
+
+这就是把**质量集中在质心**，距离O'点为$a$时的惯性张量！
+
+### 矩阵形式
+
+$$\mathbf{I}' = \mathbf{I} + \mu(a^2\mathbf{I}_{\text{单位}} - \boldsymbol{a}\boldsymbol{a}^T)$$
+
+其中 $\boldsymbol{a}\boldsymbol{a}^T$ 是外积：
+
+$$\boldsymbol{a}\boldsymbol{a}^T = \begin{pmatrix}a_1\\a_2\\a_3\end{pmatrix}\begin{pmatrix}a_1 & a_2 & a_3\end{pmatrix} = \begin{pmatrix}a_1^2 & a_1a_2 & a_1a_3\\a_2a_1 & a_2^2 & a_2a_3\\a_3a_1 & a_3a_2 & a_3^2\end{pmatrix}$$
+
+## 五、具体例子
+
+### 例：均匀细棒
+
+```
+    O'             质心O               
+    •==============•==============•
+    |<------ a ---->|<----- L/2 -->|
+    |<---------- L ------------->|
+
+总长度L，质量M
+```
+
+**已知**（相对质心）：
+$$I_{\text{质心}} = \frac{ML^2}{12}$$
+
+**求**：相对端点O'的转动惯量
+
+**解**：
+- $a = \frac{L}{2}$（质心到端点的距离）
+- $\mu = M$
+
+$$I_{\text{端点}} = I_{\text{质心}} + \mu a^2$$
+
+$$= \frac{ML^2}{12} + M\left(\frac{L}{2}\right)^2$$
+
+$$= \frac{ML^2}{12} + \frac{ML^2}{4}$$
+
+$$= \frac{ML^2}{12} + \frac{3ML^2}{12} = \frac{ML^2}{3}$$
+
+**验证**：直接积分也得到$\frac{ML^2}{3}$ ✓
+
+### 对角元素的简化形式
+
+对于绕某个轴（比如$z$轴）的转动惯量：
+
+$$I_{zz}' = I_{zz} + \mu(a^2 - a_z^2) = I_{zz} + \mu(a_x^2 + a_y^2)$$
+
+这就是常见的**平行轴定理**：
+$$\boxed{I' = I_{\text{cm}} + M d^2}$$
+
+其中$d$是两平行轴之间的垂直距离。
+
+## 六、实用技巧
+
+### 为什么这个公式有用？
+
+1. **质心系通常更简单**：
+   - 对称性更明显
+   - 积分更容易
+
+2. **但实际旋转轴可能不过质心**：
+   - 门绕铰链转（铰链不在质心）
+   - 钟摆（支点在上方）
+   
+3. **策略**：
+   - 先算相对质心的$I_{ik}$（简单）
+   - 再用平行轴定理转换到实际轴
+
+### 计算流程
+
+```
+步骤1: 找质心位置
+       ↓
+步骤2: 计算I_ik（质心系，利用对称性）
+       ↓
+步骤3: 确定实际旋转轴相对质心的位置 a
+       ↓
+步骤4: 用平行轴定理计算I'_ik
+```
+
+## 七、总结
+
+### 公式(32.12)的本质
+
+$$I_{ik}' = I_{ik} + \mu(a^2\delta_{ik} - a_i a_k)$$
+
+**含义**：
+- $I_{ik}$：质心系的惯性张量（内禀性质）
+- 修正项：把整个物体看成质量集中在质心的质点，计算该质点对O'点的惯性张量
+
+**物理图像**：
+```
+真实物体:          等效模型:
+  
+  ● ●              
+  ● ● ●      →     • (质量μ在质心)
+  ● ●              
+  
+相对O'的I'    =   内禀I + 质心作为质点的贡献
+```
+
+这就是刚体力学中最重要的定理之一！
