--- a/基础物理/杨振宁/第九讲.md
+++ b/基础物理/杨振宁/第九讲.md
@@ -1,26 +1,32 @@
 
-Today I'm going to talk about Chapter 9. Chapter 9 is mainly about the Center of Mass. These are all extremely important concepts. First, we need to define central mass. There are two different definitions for this kind of quantum mechanics. One is the geometric definition. The other is the unidirectional definition. You can prove that these two definitions are the same.（今天我要讲的是第九章。第九章主要讲的是质心。这些都是极其重要的概念。首先，我们需要定义质心。这种情形之下，有两种不同的定义。一种是几何定义。另一种是代数定义。你可以证明这两种定义是相同的。）
+## 第九章：质心和线性动量
+
+Today I'm going to talk about Chapter 9. Chapter 9 is mainly about the Center of Mass. These are all extremely important concepts. First, we need to define central mass. There are two different definitions for this kind of quantum mechanics. One is the geometric definition. The other is the unidirectional definition. You can prove that these two definitions are the same.（今天我要讲的是第九章。第九章主要讲的是*质心*。这些都是极其重要的概念。首先，我们需要定义质心。这种情形之下，有两种不同的定义。一种是几何定义。另一种是代数定义。你可以证明这两种定义是相同的。）
 
 $$\vec{r}_{\text{com}} = \frac{1}{M} \sum_{i=1}^{n} m_i \vec{r}_i,$$
+下标 com = center of mass，质心的意思。
 
 Today, we will use the unidirectional definition. Let's say there are many particles. Their mass is m i, and their coordinate is r i. Given a coordinate system, there are many r i and m i. So, if we sum up m i, r i, and divide by the total mass, we get the central mass, the coordinate. For example, if there are three particles, we get the central mass. This definition is very simple. If there are only two particles, in one-dimension, we know that one particle is heavy and the other is light.（今天我们将使用代数定义。假设有很多粒子，它们的质量为 $m_i$，坐标为 $r_i$。给定一个坐标系，会有许多 $r_i$ 和 $m_i$。因此，如果我们把 $m_i$ 和 $r_i$ 相乘，再除以总质量，就能得到质心坐标。例如，如果有三个粒子，我们就能得到质心。这个定义非常简单。如果只有两个粒子，在一维情况下，我们知道一个粒子较重，另一个较轻。）
 
 If we divide by the two particles, in one-dimension, we get m 1 x 1 plus m 2 x 2 divided by m 1 plus m 2. This is the central mass, the x-central mass. For example, if m 1 and m 2 are equal, this is 1, and m 2 is 2. Then, m 1 and m 2 are obvious. Because 2 has a bigger weight, so it is in one-third place. The central mass is here. I think the intuition is very simple. So, this is a more general definition.(如果我们将两个粒子在一维空间中进行划分，会得到(m₁x₁ + m₂x₂)/(m₁ + m₂)。这就是质心位置，即x方向的质心坐标。举个例子，假设m₁=1，m₂=2（显然m₂质量更大）。由于第二个粒子质量更大，质心会偏向它三分之一的位置。质心就在这里。我认为这个原理非常直观。因此，这是一个更具普适性的定义。)
 
-In this definition, the first one is the theorem. The r-central mass, so defined, is independent of the choice of coordinate system. In general, an algebra is defined as a central mass. However, there are three particles. They are defined as a central mass. I used a coordinate system. If I use another coordinate system, is it still the same central mass? The theorem says yes. But it needs a proof. This book is very vague.(在这个定义中，第一条是定理。如此定义的 r 中心质量，与坐标系的选择无关。一般来说，代数被定义为一个中心质量。然而，这里存在三个粒子。它们被定义为一个中心质量。我使用了一个坐标系。如果我使用另一个坐标系，它仍然是同一个中心质量吗？定理说答案是肯定的。但这需要一个证明。这本书说得非常含糊。)
+In this definition, the first one is the theorem. The r-central mass, so defined, is independent of the choice of coordinate system. In general, an algebra is defined as a central mass. However, there are three particles. They are defined as a central mass. I used a coordinate system. If I use another coordinate system, is it still the same central mass? The theorem says yes. But it needs a proof. This book is very vague.(在这个定义中，第一条是定理。如此定义的 *质心与坐标系的选择无关*。一般来说，代数被定义为一个质心。然而，这里存在三个粒子。它被定义为一个质心。我使用了一个坐标系。如果我使用另一个坐标系，它仍然是同一个质心吗？定理说答案是肯定的。但这需要一个证明。这本书说得非常含糊。)
 
-I found that the purpose of this book is to make it easy for everyone to understand. But I hope everyone can understand that there are some sensitive points. This proof is actually very simple. If you take a coordinate system, and I take another coordinate system, it is a displacement. Change of axis by displacement. By displacement, you move the axis parallel. But you change the origin. So, if you move the coordinate axis parallel, and change the axis, then we ask, what is the RRI? I call it RRI prime. RRI prime is RRI plus displacement.(我发现这本书的目的是为了让每个人都能轻松理解。但我希望大家能明白其中有一些敏感点。这个证明其实非常简单。如果你取一个坐标系，我取另一个坐标系，这就是一个位移。通过位移改变坐标轴。通过位移，你可以平行移动坐标轴。但你会改变原点。所以，如果你平行移动坐标轴并改变坐标轴，那么我们问，RI是什么？我称之为RI撇。RI撇等于RI加上位移。)
+I found that the purpose of this book is to make it easy for everyone to understand. But I hope everyone can understand that there are some sensitive points. This proof is actually very simple. If you take a coordinate system, and I take another coordinate system, it is a displacement. Change of axis by displacement. By displacement, you move the axis parallel. But you change the origin. So, if you move the coordinate axis parallel, and change the axis, then we ask, what is the RRI? I call it RRI prime. RRI prime is RRI plus displacement.(我发现 *这本书的目的是为了让每个人都能轻松理解。但我希望大家能明白其中有一些敏感点*。这个证明其实非常简单。如果你取一个坐标系，我取另一个坐标系，这就是一个位移。通过位移改变坐标轴。通过位移，你可以平行移动坐标轴。但你会改变原点。所以，如果你平行移动坐标轴并改变坐标轴，那么我们问，$r_{i}'$ 是什么？RI撇等于RI加上位移。)
 $$\vec{r}^\prime = \vec{r} + \vec{d}$$
 
 So, RRI prime is RRI plus a fixed displacement. This fixed displacement is the axis of these two coordinates. The coordinates are moving from here to here. If this is... If this is... This is R. This is the original axis, XY. This is X prime, Y prime. So, this displacement... It is obvious that... Let me see.  RRI prime is upside down. This is... Sorry. This is the original axis. This is... The fixed point is here. This is R. This is R prime. It is obvious that R prime is R plus D. So, this is XY.(因此，RI prime 就是 RI 加上一个固定位移。这个固定位移就是这两个坐标轴之间的位移。坐标轴从这里移动到这里。如果这是……如果这是……这是 R。这是原始坐标轴 XY。这是 X prime，Y prime。所以，这个位移……很明显……让我看看。RRI prime 是倒置的。这是……抱歉。这是原始坐标轴。这是……固定点在这里。这是 R。这是 R prime。很明显，R prime 等于 R 加 D。所以，这是 XY。)
 
 I made a mistake. This is XY. This is X prime, Y prime. This is the displacement. This is R. This is R prime. It is obvious that R prime is R plus D. This D has nothing to do with R. This D is the displacement of the coordinate origin. So, it has nothing to do with the number of parts. It has nothing to do with the number of parts. So, what is the rest of the formula? It is... By definition, it is equal to... So, it is equal to... plus D. This is obvious that... plus... This D is independent of I. So, it is equal to summation of M, I, D. So... So, R prime is the center of mass.(我犯了一个错误。这是XY。这是X'，Y'。这是位移。这是R。这是R'。显然，R'等于R加D。这个D与R无关。这个D是坐标原点的位移。因此，它与零件数量无关。它与零件数量无关。那么，公式的其余部分是什么？根据定义，它等于...所以，它等于...加D。显然...加...这个D与I无关。因此，它等于M、I、D的和。所以...所以，R'是质心。)
 
-所以有：$$\left( \sum m_{i} \right)\vec{r_{i}} ^\prime=\sum m_{i}\vec{r_{i}}'=\sum m_{i}(\vec{r_{i}}+\vec{d})=\sum m_{i}r_{i}+\left( \sum m_{i} \right)\vec{d}$$
-那么在 $r'$ 坐标系下的质心：$$\vec{r}_{\text{com}}'=\frac{\sum m_{i}\vec{r_{i}}'}{\sum m_{i}}=\frac{\sum m_{i}\vec{r_{i}}}{\sum m_{i}}+\vec{d}=\vec{r}_{\text{com}}+\vec{d}$$
+所以有：$$\sum m_{i}\vec{r_{i}}'=\sum m_{i}(\vec{r_{i}}+\vec{d})=\sum m_{i}r_{i}+\left( \sum m_{i} \right)\vec{d}$$
+那么在 $r'$ 坐标系下的质心：$$\vec{r}_{\text{com}}'=\frac{\sum m_{i}\vec{r_{i}}'}{\sum m_{i}}=\frac{\sum m_{i}\vec{r_{i}}}{\sum m_{i}}+\vec{d}=\vec{r}_{\text{com}}+\vec{d}$$也就是说质心的位置其实还是原来那个点。
+
 By definition, it is summation of M. It is equal to summation of M, I, R, I prime. This is the new center of mass, D. D... So, it is equal to summation of M, I, R, I. It is summation of M. Plus... So, it is equal to R, center of mass, plus D. So, in other words, the new center of mass, the coordinate, is equal to the original center of mass, plus D. So, this is the same as the picture. So, this represents the center of mass.(根据定义，它是M的总和。它等于M、I、R、I'的总和。这是新的质心D。D...所以，它等于M、I、R、I的总和。它是M的总和。加上...所以，它等于R（质心）加上D。*换句话说，新的质心坐标等于原来的质心坐标加上 D*。这与图示一致。因此，这代表质心。)
 
 The two definitions are in the same place. This is the first part of the formula. The first part is... I don't move. I don't move the origin, but rotate it. Rotate the coordinate x, to see if the definition is still the same. This is a bit complicated to write, but it is actually very simple to explain.(两个定义在同一个位置。这是公式的第一部分。第一部分是……我不移动。我不移动原点，而是旋转它。旋转坐标x，看看定义是否仍然相同。写起来有点复杂，但实际上解释起来非常简单。)
+
+刚才我们讨论是平移坐标轴，那如果是坐标轴转动会影响质心的位置不？
 
 Why? Because this definition of center of mass, the rotation of the coordinate, I call it R, I prime. The rotation of the coordinate is a linear transformation The original R, I, each R has x, y, z. Later, x prime, y prime, z prime is a linear combination of x, y, z. If you don't believe this, imagine there are two dimensions, one x, one y. If you rotate it, x prime, y prime, is a linear combination of the original one. And this linear combination doesn't depend on which I you are.（为什么？因为这个质心的定义，坐标系的旋转，我称之为R，I'。坐标系的旋转是一个线性变换。原来的R，I，每个R都有x、y、z。之后的x'、y'、z'是x、y、z的线性组合。如果你不相信这一点，想象一下有两个维度，一个x，一个y。如果你旋转它，x'、y'就是原始坐标的线性组合。而且这个线性组合不依赖于你选择的是哪个I。）
 
@@ -28,9 +34,9 @@ Every point, from R to R prime, this linear combination is the same. If you take
 
 Why nine? Because x1 is a linear combination of x, y, z. So there are three coefficients. y prime is also three terms. z prime is also three terms. So it's three times three. This is called a matrix. So this transformation is a matrix multiplied by the original x, y, z. And the important point is that the nine numbers in this matrix, the nine coefficients, have nothing to do with which particle.（为什么是九？因为x1是x、y、z的线性组合，所以有三个系数。y'也是三项，z'也是三项，所以是三乘三。这就叫矩阵。因此这个变换就是矩阵乘以原来的x、y、z。关键在于这个矩阵中的九个数、九个系数，与具体是哪个粒子无关。）
 
-这里的意思是说，坐标轴旋转以后，原来在 $r$ 系下有分量 $x,y,z$，而在 $r'$ 系下的每个分量，都是 $x,y,z$ 分量的线性组合，而且这种变化对 $x',y'z'$ 都是一样的，所以会有 $3 \times 3=9$ 个变换系数。
+这里的意思是说，坐标轴旋转以后，原来在 $r$ 系下有分量 $x,y,z$，而在 $r'$ 系下的每个分量，都是 $x,y,z$ 分量的线性组合，而且这种变化对 $x',y',z'$ 都是一样的，所以会有 $3 \times 3=9$ 个变换系数。
 
-They are all one transformation. So a rotation is represented algebraically by a 3x3 matrix. Do you know that this matrix has a special name? This matrix is called an orthogonal matrix. Why is it called an orthogonal matrix? The meaning of orthogonal matrix is that originally it was an orthogonal coordinate system. After using the nine coefficients, the result is still an orthogonal system. So this is called an orthogonal matrix.（它们都是同一种变换。因此，旋转可以用一个3x3矩阵代数表示。你知道这个矩阵有个特殊的名字吗？这个矩阵被称为正交矩阵。为什么叫正交矩阵呢？正交矩阵的含义是：原本它是一个正交坐标系，经过这九个系数的变换后，结果仍然是一个正交系统。所以它被称为正交矩阵。）
+They are all one transformation. So a rotation is represented algebraically by a 3x3 matrix. Do you know that this matrix has a special name? This matrix is called an orthogonal matrix. Why is it called an orthogonal matrix? The meaning of orthogonal matrix is that originally it was an orthogonal coordinate system. After using the nine coefficients, the result is still an orthogonal system. So this is called an orthogonal matrix.（它们都是同一种变换。因此，旋转可以用一个 3x3 矩阵代数表示。你知道这个矩阵有个特殊的名字吗？这个矩阵被称为正交矩阵。为什么叫正交矩阵呢？正交矩阵的含义是：原本它是一个正交坐标系，经过这九个系数的变换后，结果仍然是一个正交系统。所以它被称为*正交矩阵*。）
 
 > [!tip]
 > 正交矩阵是指一个方阵，其列向量（或行向量）是正交单位向量，即彼此垂直且长度为 1。对于一个正交矩阵 $Q$，满足以下性质：
@@ -44,6 +50,7 @@ It doesn't mean that you can write nine as you like. You can write nine as you l
 
 <img src="https://www.feynmanlectures.caltech.edu/img/FLP_I/f11-02/f11-02_tc_big.svgz" width="240">
 实际上在二维旋转中，我们有 (参考费曼讲义第 11.3 章节)：
+
 $$\begin{equation}\begin{alignedat}{4} &x'&&=x&&\cos\theta+y&&\sin\theta,\\&y'&&=-x&&\sin\theta+y&&\cos\theta,\\&z'&&=z\end{alignedat}\end{equation}$$
 这里的的这个矩阵（也叫旋转矩阵）就是 $$R(\theta) = \begin{bmatrix} 
 \cos \theta & \sin \theta \\ 
